@@ -114,3 +114,4 @@
 	- make MLOCK accept -l and -k, turn off AUTOLIMIT if -l set. (#32)
 	- Enforced nicknames shouldn't be opers or admins, also set realname to
 		sensible things if so desired. (#34)
+ 	- STATS z implementation. (#17)
